# app/Http/Controllers/TaskController.php
@@ -2,6 +2,7 @@
 
 namespace App\Http\Controllers;
 
+use App\Http\Requests\TaskRequest;
 use App\Http\Resources\TaskResource;
 use App\Services\TaskService;
 use Illuminate\Http\Request;
@@ -23,12 +24,26 @@ final readonly class TaskController extends Controller
         return TaskResource::collection($tasks);
     }
 
-    /**
-     * Store a newly created resource in storage.
-     */
-    public function store(Request $request)
+    #[OA\Post(path: '/api/tasks', tags: ['Tasks'], summary: 'Create a task')]
+    #[OA\RequestBody(
+        required: true,
+        description: 'New Task',
+        content: new OA\JsonContent(ref: TaskRequest::class)
+    )]
+    #[OA\Response(
+        response: 201,
+        description: 'Successful operation',
+        content: new OA\JsonContent(ref: TaskResource::class)
+    )]
+    #[OA\Response(
+        response: 422,
+        description: 'Error: Unprocessable Content'
+    )]
+    public function store(TaskRequest $request)
     {
-        //
+        $task = $this->taskService->create($request);
+
+        return new TaskResource($task);
     }
 
     /**
